# img2ec

./: .gitignore  AGENTS.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20ae46faceb1_add_platform_output_copies.py  2add83d5011c_initial_schema.py  a4f2c1d39e88_add_variants.py  a8c93e1d2f15_variant_level_copy.py  b6e02f78c40d_source_image_order_index.py  b7d3e8f1a902_variant_sku_thumb_paths.py  c7f4d12e8a39_variant_scene_id.py  c91e2f4a8d77_add_sku_dimensions.py  d8e5c2a13f47_master_history.py  e2f8b9d04c12_scene_festival.py  f3aaa1c81f2b_add_video_script.py  f4a91b2c7e83_image_scene_id.py
backend/assets/fonts/: README.md
backend/img2ec/: celery_app.py  config.py  db.py  main.py
backend/img2ec/api/: ai_scenes.py  concurrency.py  copy.py  fs.py  outputs.py  projects.py  scenes.py  skus.py  uploads.py  variants.py
backend/img2ec/core/: bg_detect.py  composite.py  copy_gen.py  cutout.py  derive.py  detail_modules.py  detail_page.py  detail_template.py  master_gen.py  pipeline.py
backend/img2ec/infra/: codex_adapter.py  (+7 more)
backend/scripts/: duanwu_codex_imagen_probe.py  dump_openapi.py  generate_seed_covers.py  isolated_codex_image.py  migrate_sku_paths.py  quality_test_copy.py  quality_test_detail.py  quality_test_real.py  resume_stuck_ai_scenes.py  setup_fonts.sh  smoke_master_gen.py  smoke_ui_flow.py  test_codex_image.py
backend/tests/: conftest.py
backend/workflows/: generate_master_16x9.json  generate_master_1x1.json  generate_master_3x4.json  generate_master_9x16.json  generate_master_long.json
(+133 files in other folders)
